# Client-Server-Handler

./: .gitignore
testTaskProgramOne/: CMakeLists.txt  main.cpp
testTaskProgramOne/src/: data_synchronization.cpp  data_synchronization.h  input_data.cpp  input_data.h  processing_data.cpp  processing_data.h
testTaskProgramTwo/: CMakeLists.txt  main.cpp
